--- a/index.html
+++ b/index.html
@@ -22,10 +22,66 @@
     </div>
     <hr/>
     <div id="staffGallery">
-      <img class="galleryImage" src="./assets/Eeyore-Eh.png"/>
-      <img class="galleryImage" src="./assets/Eeyore-Zz.png"/>
-      <img class="galleryImage" src="./assets/Kanga-Roo.png"/>
-      <img class="galleryImage" src="./assets/Owl-Phone.png"/>
+      <div class = "card">
+        <img class="galleryImage" src="./assets/Eeyore-Eh.png" alt = "Eeyore balancing on his head"/>
+        <p>Eeyore-Eh</p>
+      </div>
+      <div class = "card">
+        <img class="galleryImage" src="./assets/Eeyore-Zz.png" alt = "Eeyore is sleeping"/>
+        <p>Eeyore-Zz</p>
+      </div>
+      <div class = "card">
+        <img class="galleryImage" src="./assets/Kanga-Roo.png" alt = "Kanga-Roo with Roo in its pouch"/>
+        <p>Kanga-Roo</p>
+      </div>
+      <div class = "card">
+        <img class="galleryImage" src="./assets/Owl-Phone.png" alt = "Owl holding a phone"/>
+        <p>Owl-Phone</p>
+      </div>
+      <!-- <div class = "card">
+        <img class="galleryImage" src="assets/Kanga-Egg.png" alt = "Kanga-Roo flipping an egg"/>
+        <p>Kanga-Egg</p>
+      </div> -->
+      <!-- <div class = "card">
+        <img class="galleryImage" src="assets/Owl-Music.png" alt = "Owl listening to music"/>
+        <p>Owl-Music</p>
+      </div> -->
+      <!-- <div class = "card">
+        <img class="galleryImage" src="assets/Piglet-Cold.png" alt = "Piglet is cold"/>
+        <p>Piglet-Cold</p>
+      </div> -->
+      <!-- <div class = "card">
+        <img class="galleryImage" src="assets/Piglet-Flower.png" alt = "Piglet is holding a flower"/>
+        <p>Piglet-Flower</p>
+      </div> -->
+      <div class = "card">
+        <img class="galleryImage" src="assets/Pooh-Jess.png" alt = "Pooh is holding a balloon"/>
+        <p>Pooh-Jess</p>
+      </div>
+      <!-- <div class = "card">
+        <img class="galleryImage" src="assets/Rabbit-Flower.png" alt = "Rabbit is holding a flower"/>
+        <p>Rabbit-Flower</p>
+      </div> -->
+      <div class = "card">
+        <img class="galleryImage" src="assets/Rabbit-Carrot.png" alt = "Rabbit is holding a carrot"/>
+        <p>Rabbit-Carrot</p>
+      </div>
+      <!-- <div class = "card">
+        <img class="galleryImage" src="assets/Roo-Jump.png" alt = "Roo is jumping"/>
+        <p>Roo-Jump</p>
+      </div> -->
+      <div class = "card">
+        <img class="galleryImage" src="assets/Roo-Bee.png" alt = "Roo is looking at a bee"/>
+        <p>Roo-Bee</p>
+      </div>
+      <!-- <div class = "card">
+        <img class="galleryImage" src="assets/Tigger-Energy.png" alt = "Tigger is drinking an energy drink"/>
+        <p>Tigger-Energy</p>
+      </div> -->
+      <div class = "card">
+        <img class="galleryImage" src="assets/Tigger-Jump.png" alt = "Tigger is jumping"/>
+        <p>Tigger-Jump</p>
+      </div>
     </div>
   </body>
 
