--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
     <div id="staffGallery">
       <div class = "card">
         <img class="galleryImage" src="./assets/Eeyore-Eh.png" alt = "Eeyore balancing on his head"/>
-        <p>Eeyore-Eh</p>
+        <h2>Eeyore-Eh</h2>
       </div>
       <div class = "card">
         <img class="galleryImage" src="./assets/Eeyore-Zz.png" alt = "Eeyore is sleeping"/>
-        <p>Eeyore-Zz</p>
+        <h2>Eeyore-Zz</h2>
       </div>
       <div class = "card">
         <img class="galleryImage" src="./assets/Kanga-Roo.png" alt = "Kanga-Roo with Roo in its pouch"/>
-        <p>Kanga-Roo</p>
+        <h2>Kanga-Roo</h2>
       </div>
       <div class = "card">
         <img class="galleryImage" src="./assets/Owl-Phone.png" alt = "Owl holding a phone"/>
-        <p>Owl-Phone</p>
+        <h2>Owl-Phone</h2>
       </div>
       <!-- <div class = "card">
         <img class="galleryImage" src="assets/Kanga-Egg.png" alt = "Kanga-Roo flipping an egg"/>
@@ -56,7 +56,7 @@
       </div> -->
       <div class = "card">
         <img class="galleryImage" src="assets/Pooh-Jess.png" alt = "Pooh is holding a balloon"/>
-        <p>Pooh-Jess</p>
+        <h2>Pooh-Jess</h2>
       </div>
       <!-- <div class = "card">
         <img class="galleryImage" src="assets/Rabbit-Flower.png" alt = "Rabbit is holding a flower"/>
@@ -64,7 +64,7 @@
       </div> -->
       <div class = "card">
         <img class="galleryImage" src="assets/Rabbit-Carrot.png" alt = "Rabbit is holding a carrot"/>
-        <p>Rabbit-Carrot</p>
+        <h2>Rabbit-Carrot</h2>
       </div>
       <!-- <div class = "card">
         <img class="galleryImage" src="assets/Roo-Jump.png" alt = "Roo is jumping"/>
@@ -72,7 +72,7 @@
       </div> -->
       <div class = "card">
         <img class="galleryImage" src="assets/Roo-Bee.png" alt = "Roo is looking at a bee"/>
-        <p>Roo-Bee</p>
+        <h2>Roo-Bee</h2>
       </div>
       <!-- <div class = "card">
         <img class="galleryImage" src="assets/Tigger-Energy.png" alt = "Tigger is drinking an energy drink"/>
@@ -80,7 +80,7 @@
       </div> -->
       <div class = "card">
         <img class="galleryImage" src="assets/Tigger-Jump.png" alt = "Tigger is jumping"/>
-        <p>Tigger-Jump</p>
+        <h2>Tigger-Jump</h2>
       </div>
     </div>
   </body>
